<resources>
    <string name="app_name">Test</string>
    <string name="search">search</string>
    <string name="edit">edit</string>
    <string name="current_weather">Current Weather</string>
    <string name="_3_days_weather">3 days weather</string>
    <string name="week_weather">Weather for 1 week</string>
    <string name="weather_for_2_week">Weather for 2 week</string>
    <string name="settings">Settings</string>
    <string name="weather_from_map">Weather from map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>